<resources>
    <string name="app_name">TwentyOne</string>
    <string name="title_activity_login">Sign in</string>

    <string name="Instructions">Instructions\nInstructions\nInstructions</string>

    <string name="Email">Email</string>
    <string name="Password">Password</string>
    <string name="ConfirmPassword">Confirm Password</string>
    <string name="Login">Login</string>
    <string name="LogOut">Logout</string>
    <string name="LoginHere">Login here</string>
    <string name="Cancel">Cancel</string>
    <string name="Register">Register here</string>
    <string name="SignUp">SignUp</string>
    <string name="WelcomeToTwentyOne">Welcome To TwentyOne</string>
    <string name="RegistrationForTwentyOne">Registration For TwentyOne</string>


    <string name="No">No</string>
    <string name="Yes">Yes</string>
    <string name="Name">Name</string>
    <string name="Phone_number">Phone Number</string>
    <string name="Phone">Phone</string>
    <string name="AddGoal">Add Goal</string>
    <string name="ViewGoalRecords">Show Goal Records</string>
    <string name="SetYourHabitOrGoal">Set Your Habit Or Goal</string>
    <string name="EnterYourGoal">Enter Your Goal</string>
    <string name="SetGoal">Set Goal</string>
    <string name="userLogoutSuccessfully">User Logout Successfully</string>
    <string name="ConfirmGoal">Confirm Your Goal</string>
    <string name="YourGoalList">Your Goal List</string>
    <string name="YourGoal">Your Goal</string>
    <string name="YourGoalRecords">Your Goal Records</string>
    <string name="PleaseSelect">Please Select</string>
    <string name="Home">Home</string>
    <string name="DidYouCompletedYourGoal">Did You Complete Your Goal?</string>
    <string name="TotalDaysYouCompleted">Total Days You Completed</string>
    <string name="TotalDaysRemaining">Total Days Remaining</string>
    <string name="TotalDaysOfGoal">Total Days Of Your Goal</string>
    <string name="GoalStartingDate">Goal Started Date</string>
    <string name="GoalEndDate">Goal End Date</string>
    <string name="AddNewQuotes">Add New Quotes</string>
    <string name="UpdateQuotes">Update Quotes</string>
    <string name="DeleteQuotes">Delete Quotes</string>
    <string name="ChangeYourQuotes">Change Your Quote</string>
    <string name="HowManyDaysYouNeedToCompleteGoal">How Many Days You Need To Complete This Goal ?</string>


    <string name="msg_UserSuccessfullyRegistered">User Successfully Registered</string>
    <string name="msg_GoalSuccessfully">Goal Added Successfully</string>
    <string name="msg_QuoteSuccessfully">Quote Added Successfully</string>
    <string name="msg_QuoteUpdatedSuccessfully">Quote Updated Successfully</string>
    <string name="msg_QuoteDeletedSuccessfully">Quote Deleted Successfully</string>
    <string name="msg_DailyGoalActionAddedSuccessfully">Daily Goal Action Added Successfully</string>
    <string name="msg_GoalActionSuccessfully">Your Goal Action Added Successfully</string>
    <string name="msg_QuoteaddedSuccessfully">Quote Added Successfully</string>
    <string name="msg_CongratulationsYouCompletedYourGoal">Congratulations You have Completed Your Goal</string>


    <string name="err_PasswordShouldNotdifferent">Please try again\nPassword should not be different</string>
    <string name="err_credentialisnotmatching">Please try again\nCredential is not correct</string>
    <string name="err_pleaseTryAgain">Please try again</string>
    <string name="err_youAlreadyFinishedYourGoal">you Already Finished Your This Goal</string>
    <string name="err_youAlreadyAetActionForYourGoal">you Already Set Action For This Goal</string>
    <string name="err_enter_your_name">Please Enter Your Name</string>
    <string name="err_enter_your_email">Please Enter Your Email</string>
    <string name="err_enter_your_phone">Please Enter Your Phone</string>
    <string name="err_enter_your_password">Please Enter Your Password</string>
    <string name="err_enter_your_confirm_password">Please Enter Your Confirm Password</string>
    <string name="err_PleaseAddGoal">Please Enter Your Goal</string>
    <string name="err_PleaseAddQuote">Please Enter Your Quote</string>
    <string name="err_PleaseAddDays">Please Enter How Many Days You Need To Complete Your Goal</string>


    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="addPreGoals">Add Predefined Goals</string>
    <string name="noti_channel_default">Primary Channel</string>
    <string name="noti_channel_second">Secondary Channel</string>


</resources>
