<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_notification1"
        android:icon="@drawable/menu_list"
        android:title="action_notification"
        app:showAsAction="always">
        <menu>

            <item
                android:id="@+id/addNewQuotes_menu"
                android:icon="@drawable/ic_add"
                android:orderInCategory="100"
                android:title="@string/AddNewQuotes" />

            <item
                android:id="@+id/addPreGoals_menu"
                android:icon="@drawable/ic_add"
                android:orderInCategory="100"
                android:title="@string/addPreGoals" />

            <item
                android:id="@+id/ic_logout"
                android:icon="@drawable/logout3"
                android:orderInCategory="100"
                android:title="@string/LogOut" />



        </menu>
    </item>
</menu>