<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/app_background"
    android:orientation="vertical"
    tools:context=".AddGoalActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/common_application_margin"
        android:gravity="center"
        android:orientation="vertical">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/AddGoal"
                android:textColor="@color/title_color"
                android:textSize="@dimen/twenty_two_sp"
                android:textStyle="bold" />
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/ten_dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/SetYourHabitOrGoal"
                android:textColor="@color/dark_blue"
                android:textSize="@dimen/eighteen_sp" />

            <EditText
                android:id="@+id/etSetGoal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/EnterYourGoal"
                android:inputType="textMultiLine"
                android:maxLength="50"
                android:maxLines="5"
                android:minLines="2"
                android:textColor="@color/edit_text"
                android:textSize="@dimen/eighteen_sp" />

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/ten_dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/HowManyDaysYouNeedToCompleteGoal"
                android:textColor="@color/dark_red"
                android:textSize="@dimen/eighteen_sp" />

            <EditText
                android:id="@+id/etToalDaysForGoal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:maxLength="2"
                android:singleLine="true"
                android:textColor="@color/edit_text"

                android:textSize="@dimen/eighteen_sp" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/hundred_fifty_dp"
            android:layout_marginTop="@dimen/ten_dp"
            android:orientation="horizontal">

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/five_dp"
                android:layout_weight="1"
                android:background="@color/btn_green"
                android:onClick="onSetGoalBtnClick"
                android:text="@string/SetGoal"
                android:textColor="@color/white" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/five_dp"
                android:layout_weight="1"
                android:background="@color/btn_cancel"
                android:onClick="onCancelbtnClick"
                android:text="@string/Cancel"
                android:textColor="@color/white" />
        </LinearLayout>


    </LinearLayout>
</LinearLayout>
