<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/five_dp"
    android:gravity="center"
    android:orientation="vertical">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/YourGoal"
            android:textColor="@color/btn_green"
            android:textSize="@dimen/eighteen_sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvGoalName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/YourGoal"
            android:textColor="@color/light_green"
            android:textSize="@dimen/sixteen_sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/five_dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/five_dp"
            android:text="@string/GoalStartingDate"
            android:textColor="@color/light_orange"
            android:textSize="@dimen/sixteen_sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvGoalStartDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:textColor="@color/black"
            android:layout_marginLeft="@dimen/five_dp"
            android:text="@string/GoalStartingDate"
            android:textSize="@dimen/sixteen_sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/five_dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/five_dp"
            android:text="@string/TotalDaysOfGoal"
            android:textColor="@color/light_orange"
            android:textSize="@dimen/sixteen_sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvTotalDaysOfGoal"
            android:layout_width="wrap_content"

            android:textColor="@color/black"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/five_dp"
            android:text="@string/TotalDaysOfGoal"
            android:textSize="@dimen/sixteen_sp" />
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/five_dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/five_dp"
            android:text="@string/TotalDaysYouCompleted"
            android:textColor="@color/light_orange"

            android:textSize="@dimen/sixteen_sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvTotalGoalCompletionDay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/five_dp"

            android:textColor="@color/black"
            android:text="@string/YourGoal"
            android:textSize="@dimen/sixteen_sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/five_dp"

        android:layout_marginTop="@dimen/five_dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/five_dp"
            android:text="@string/GoalEndDate"
            android:textColor="@color/light_orange"
            android:textSize="@dimen/sixteen_sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvGoalEndDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/five_dp"
            android:text="@string/GoalEndDate"
            android:textColor="@color/black"
            android:textSize="@dimen/sixteen_sp" />
    </LinearLayout>

    <ProgressBar
        android:id="@+id/progressBar"
        style="@style/Widget.AppCompat.ProgressBar.Horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</LinearLayout>